# FLEUR

./: .atom-build.yml  .gitignore  .gitlab-ci.yml  .gitmodules  CHANGELOG.md  CITATION.cff  CMakeLists.txt  CONTRIBUTING.md  FDphonons.py  LICENSE  README  README.md  TODO  citation.cff  compilation.py  configure.sh  future  wann_socmatvec_rs.F
cdn/: CMakeLists.txt  MagMoments.F90  cdnovlp.F90  cdntot.F90  cdntot.f90  cdnval.F90  diflgr.f  eparas.f90  genNewNocoInp.f90  int_21.f90  int_21lo.f90  m_perp.f90  nIJ_mat.f90  n_mat.f90  n_mat21.f90  od_abvac.f90  od_chirot.f  prp_qfft_map.f90  pwden.F90  pwint.f90  pwint_sl.f90  q_int_sl.F90  q_mt_sl.f90  qal_21.f90  qpw_to_nmt.f90  rcerf.f  rot_den_mat.f  slab_dim.f90  slabgeom.f90  to_pulay.F  vacden.F90
cdn_mt/: #abccoflo.f90#  CMakeLists.txt  abccoflo.f90  abclocdn.F90  abclocdn1.F90  abclocdn_pulay.F  abclocdn_pulay.F90  abcof.F90  abcof3.F90  abcrot2.f90  alignSpinAxisMagn.F90  alignSpinAxisMagn.f90  calcDenCoeffs.f90  cdncore.F90  cdnmt.F90  cdnmt.f90  cdnmtlo.f90  crystalfieldCoeffs.f90  denMultipoleExp.f90  jDOS.f90  magDiMom.f90  magMoms.f90  magMultipoles.F90  magnMomFromDen.f90  orbMagMoms.f90  orb_comp2.f90  radfun.f90  resMoms.f90  rhomt.f90  rhomt21.f90  rhomtlo.f90  rhonmt.f90  rhonmt21.F90  rhonmt21.f90  rhonmtlo.f90  rhosphnlo.f90  setabc1locdn.f90  setabc1locdn1.f90
cmake/: Architectures.txt  CMakeLists.txt.git  CompilerConfig.txt  Files_and_Targets.txt  Generate_Schema.cmake  JUQEEN.cmake  JURECA.cmake  ReportConfig.txt  buildbot.sh  buildinfo.cmake  cmake.gfortran.config  cmake.iff.config  cmake.juqueen.config  cmake.jureca.config  cmake.juropa.config  cmake.rwth.config  compileenv.txt  compiler.sh  compilerflags.cmake  config.cmake  docker.txt  filespecific.cmake  fleurist_setup.cmake  hdf5-subproject.cmake  machines.sh  process_arguments.sh  pytest_setup.cmake  store_environment.sh  yesno.cmake
core/: CMakeLists.txt  ccdnup.f90  cfnorm.f  cfnorm.f90  cnodes.f  core.f90  core_.f  cored.F90  coredr.F90  coreerr.f  coreerr.f90  corehff.f  crtail.f  diff.f  etabinit.F90  felim.f  (+14 more)
diagonalization/: CMakeLists.txt  available_solvers.F90  chani.F90  chani.f90  chase_diag.F90  cusolver.F90  cusolver.c  cusolver_diag.F90  diag_test.F90  eigen_diag.F90  elemental.F90  elpa.F90  elpa_20180525.F90  elpa_20180525_onenode.F90  elpa_cpp.F90  elsi.F90  franza.F90  geneigbrobl.F90  lapack_diag.F90  locrectify.F90  magma.F90  mod_loccoeff.f90  packed_to_full.f90  scalapack.F90  scalapack.f90  ssubredist1.F90  ssubredist2.F90  symmetrize_matrix.f90  types_mpimat.F90  writeout.F90  zsymsecloc.F90  zsymsecloc_cpp.F90
fleurinput/: CMakeLists.txt  calculator.f  calculator.f90  constants.f90  fleurinput_mpi_bc.f90  fleurinput_read_xml.f90  mpi_bc_tool.F90  types_atoms.F90  types_banddos.f90  types_brZone.f90  types_cell.f90  types_coreSpecInput.f90  types_econfig.F90  types_enpara.F90  types_enparaXML.f90  types_field.F90  types_fleurinput.f90  types_fleurinput_base.F90  types_fleurinput_base.f90  types_forcetheo_data.f90  types_gfinp.F90  types_hub1inp.f90  types_hybinp.f90  types_hybrid.f90  types_input.f90  types_juPhon.F90  types_kpts.F90  types_kpts.f90  types_mpinp.f90  types_noco.f90  types_oneD.f90  types_sliceplot.f90  types_sym.f90  types_vacuum.f90  types_wannier.f90  types_xcpot.F90  types_xml.f90
inpgen2/: CMakeLists.txt  atompar.F90  bravais_symm.f90  check_mt_radii.f90  closure.f90  default.econfig  default2.econfig  default_econfig.h  default_econfig.h.backup  dropDefault2EConfig.c  dropDefaults.c  dropOxidesValidationEConfig.c  dropProfiles.c  film_sym.f90  inpgen.f90  inpgen_help.f90  make_atom_groups.f90  make_atomic_defaults.f90  make_crystal.f90  make_defaults.f90  make_kpoints.f90  make_magnetism.f90  make_spacegroup.f90  mod_symdata.f  oxides_validation.econfig  oxides_validation_econfig.h.backup  process_lattice_namelist.f90  profile.config  profileConfig.h.backup  read_inpgen_input.f90  read_old_inp.f90  soc_or_ssdw.f90  ss_sym.f  struct_input.f90  super_check.f90  symproperties.f90  types_Profile.f90
inpgen2/old_inp/: apws_dim.f90  dimen7.F90  dimens.F90  first_glance.f  fleur_init_old.F90  inped.F90  inpeig.f90  inpeig_dim.f90  inpnoco.F90  parawrite.f90  prp_xcfft_box.f  rw_inp.f90  rw_noco.f90  rw_symfile.f  setlomap.F90  setup.f90  spg2set.f  strgn_dim.F
juDFT/: CMakeLists.txt  args.F90  check_arguments.F90  check_para.F90  check_para.f90  fleur_arguments.F90  fpErrorDetection.c  hdf_accessprp.F90  hdf_tools.F90  hdf_tools_attr.F90  hdf_tools_exists.F90  hdf_tools_misc.F90  hdf_tools_rw.F90  hdf_tools_rw_var.F90  hdf_tools_stride.F90  info.F90  init.F90  juDFT.F90  juDFT_env.h  logging.f90  npy.F90  npy.f90  patch_intel.c  round.f90  stop.F90  string.f90  sysinfo.F90  time.F90  usage_data.F90  xmlOutput.F90
mini-apps/matrix-redist/: CMakeLists.txt  main.f90
src/fleur/diagonalization/: CMakeLists.txt  available_solvers.F90  chase_diag.F90  dummy_diag.F90  eigen_diag.F90  elemental.F90  elpa_20180525.F90  elpa_20180525_onenode.F90  fleur_elemental.cpp  lapack_singlePrec_diag.F90  magma.F90  scalapack.F90
src/libraries/fleurinput/: CMakeLists.txt  calculator.f90  constants.f90  fleurinput_read_xml.f90  json_tools.F90  types_atoms.F90  types_banddos.f90  types_brZone.f90  types_coreSpecInput.f90  types_input.f90  types_juPhon.F90  types_kpts.F90  types_sliceplot.f90  types_sym.f90  types_vacuum.f90  types_wannier.f90  types_xcpot.F90  types_xml.f90
src/tools/inpgen2/: CMakeLists.txt  bravais_symm.f90  default2_econfig.h.backup  dropProfiles.c  film_sym.f90  inpgen.f90  inpgen_help.f90  inpgen_version.f90  make_defaults.f90  make_kpoints.f90  make_spacegroup.f90  oxides_validation_econfig.h.backup  read_inpgen_input.f90
src/tools/inpgen2/kpoints/: bravais.f  kplib_interface_dummy.F90  kpoints.f90  kptmop.f
src/tools/inpgen2/old_inp/: apws_dim.f90  dimen7.F90  fleur_init_old.F90  inpeig_dim.f90  inpnoco.F90  parawrite.f90  rw_inp.f90  setlomap.F90
src/tools/mini-apps/diagonalization/: CMakeLists.txt  main.F90
src/tools/mini-apps/matrix-redist/: CMakeLists.txt  constants.f90  main.f90
(+2962 files in other folders)
